package edu.asestatuas.golfstrokes;

public interface GolfPlay {

    void scoring(ScoreCard scoreCard);
    
}
